--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -1,102 +1,105 @@
----
-# 3D-DanceMotionAI Configuration
+# DanceMotionAI Configuration
 
-# General Settings
+# General settings
 general:
+  seed: 42
+  num_workers: 4
+  device: 'cuda'  # 'cuda' or 'cpu'
   debug: false
-  save_intermediate_results: false
-  use_gpu: true
-  random_seed: 42
-  output_dir: "results"
 
-# Data Settings
-data:
-  video_fps: 30
-  image_size: [1080, 1920]  # [height, width]
-  max_people: 5
-  min_person_size: 100  # Minimum pixel height for valid detection
+# Input/output settings
+io:
+  input_size: [512, 512]  # Height, Width
+  fps: 30
+  max_sequence_length: 1800  # Maximum number of frames (60 seconds at 30 fps)
 
-# 3D Pose Estimation (DanceHRNet)
+# 3D Pose Estimation settings
 pose_estimation:
-  model_path: "models/dancehrnet_weights.pth"
-  confidence_threshold: 0.6
-  feature_dim: 512
-  agt_blocks: 6
-  attention_heads: 8
-  gcn_layers: 3
-  use_kitro: true
-  joint_count: 25
-  hand_model_path: "models/4dhands_weights.pth"
-
-# 4DHands Module
-hands_4d:
-  input_dim: 3  # x, y, z coordinates
-  hidden_dim: 128
-  num_fingers: 5  # thumb, index, middle, ring, pinky
-  joints_per_finger: 4  # MCP, PIP, DIP, TIP
-  num_heads: 4  # for transformer attention
-  num_layers: 3  # for transformer layers
+  model_type: 'dancehrnet'
+  pretrained_weights: 'weights/dancehrnet_weights.pth'
+  num_joints: 25
+  num_layers: 6
+  hidden_dim: 512
+  num_heads: 8
   dropout: 0.1
-  use_lstm_crf: true  # for gesture classification
-  num_classes: 30  # number of hand gesture classes to recognize
-  enforce_bone_length: true  # ensure realistic hand proportions
-  temporal_window: 32  # frames to consider for temporal context
-  use_confidence_weighting: true  # weight keypoints by detection confidence
+  agt_blocks: 4  # Number of Adaptive Graph Transformer blocks
+  graph_layers: 3  # Number of GCN layers
+  graph_hidden_dim: 256
+  confidence_threshold: 0.5  # Minimum confidence for keypoints
 
-# Multimodal Analysis (DanceFormer)
+# 4DHands settings
+hands_4d:
+  model_type: 'rat_sir'  # RAT-SIR architecture
+  pretrained_weights: 'weights/hands_4d_weights.pth'
+  num_hand_joints: 21  # Per hand
+  hidden_dim: 256
+  num_layers: 4
+  dropout: 0.1
+  rat_blocks: 3  # Number of Relation-aware Tokenization blocks
+  sir_blocks: 2  # Number of Spatio-temporal Interaction Reasoning blocks
+  confidence_threshold: 0.4
+
+# Multimodal Analysis settings
 multimodal_analysis:
-  model_path: "models/danceformer_weights.pth"
-  fusion_type: "cross_attention"  # Options: "concat", "cross_attention", "sum"
+  model_type: 'danceformer'
+  pretrained_weights: 'weights/danceformer_weights.pth'
+  hidden_dim: 512
+  num_layers: 6
+  num_heads: 8
+  dropout: 0.1
+  cross_modal_heads: 4  # Number of cross-modal attention heads
+  temporal_window: 64  # Number of frames to consider for temporal analysis
   music_feature_dim: 128
-  sequence_length: 120  # 4 seconds at 30fps
-  transformer_layers: 4
-  use_dynamic_graph: true
+  pose_feature_dim: 256
+  output_feature_dim: 512
 
-# Similarity Analysis (3D-DanceDTW)
+# Music Analysis settings
+music_analysis:
+  hop_length: 512
+  n_fft: 2048
+  n_mels: 128
+  sample_rate: 22050
+  beat_frames_tolerance: 2  # Frames tolerance for beat detection
+  feature_rate: 30  # Features per second (should match video fps)
+  feature_types:
+    - 'mfcc'  # Mel-frequency cepstral coefficients
+    - 'chroma'  # Chromagram
+    - 'onset'  # Onset strength
+    - 'tempo'  # Tempo features
+    - 'beat'  # Beat tracking
+
+# Similarity Analysis settings
 similarity_analysis:
-  feature_extractor:
-    joint_angle_weight: 0.4
-    velocity_weight: 0.3
-    acceleration_weight: 0.2
-    position_weight: 0.1
-  
-  wavelet: "db4"
-  wavelet_levels: 3
-  scale_weights: [0.6, 0.3, 0.1]
-  use_learned_weights: true
-  weight_model_path: "models/weight_model.pth"
-  similarity_threshold: 0.7  # Threshold for determining similarity
+  model_type: 'dance_dtw'
+  pretrained_weights: 'weights/dance_dtw_weights.pth'
+  feature_dim: 512
+  num_layers: 4
+  hidden_dim: 256
+  dropout: 0.1
+  dtw_window: 0.1  # DTW window size as fraction of sequence length
+  similarity_threshold: 0.8  # Threshold for similarity detection
+  wavelet_levels: 5  # Number of wavelet decomposition levels
+  distance_weights:
+    position: 0.4
+    velocity: 0.2
+    acceleration: 0.1
+    angle: 0.3
 
-# Visualization
+# Visualization settings
 visualization:
   skeleton_color: [0, 255, 0]  # RGB
-  skeleton_thickness: 2
-  plot_style: "seaborn-whitegrid"
-  3d_renderer: "pyrender"  # Options: "pyrender", "plotly", "matplotlib"
-  show_confidence: true
-  hand_joint_size: 20
-  hand_colors:
-    wrist: [0, 0, 0]  # black
-    thumb: [255, 0, 0]  # red
-    index: [0, 0, 255]  # blue
-    middle: [0, 255, 0]  # green
-    ring: [128, 0, 128]  # purple
-    pinky: [255, 165, 0]  # orange
-    palm: [128, 128, 128]  # gray
-
-# AR/VR Settings
-ar_vr:
-  enable_ar: false
-  enable_vr: false
-  ar_device: "hololens"  # Options: "hololens", "arkit", "arcore"
-  vr_device: "oculus"  # Options: "oculus", "vive", "wmr"
-  haptic_feedback: false
-
-# Web Interface
-web_interface:
-  host: "0.0.0.0"
-  port: 8080
-  max_upload_size: 500  # MB
-  allowed_extensions: ["mp4", "avi", "mov", "mp3", "wav"]
-  enable_https: false
-  session_timeout: 3600  # seconds
+  joint_color: [255, 0, 0]  # RGB
+  skeleton_thickness: 3
+  joint_radius: 5
+  hand_color: [0, 0, 255]  # RGB
+  hand_skeleton_thickness: 2
+  hand_joint_radius: 3
+  background_color: [0, 0, 0]  # RGB
+  text_color: [255, 255, 255]  # RGB
+  font_scale: 0.7
+  include_confidence: true  # Show confidence scores
+  include_frame_number: true  # Show frame numbers
+  include_metrics: true  # Show metrics during visualization
+  side_by_side: true  # Side-by-side comparison in comparison mode
+  diff_highlight_color: [255, 255, 0]  # Color to highlight differences
+  diff_threshold: 0.2  # Threshold for highlighting differences
