--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,75 @@
-numpy>=1.22.0
-scipy>=1.8.0
-torch>=1.13.0
-torchvision>=0.14.0
-opencv-python>=4.6.0
-scikit-learn>=1.1.0
-pyyaml>=6.0
-tqdm>=4.64.0
+# Core dependencies
+numpy>=1.20.0
+scipy>=1.7.0
+pandas>=1.3.0
+
+# Deep learning framework
+torch>=1.10.0
+torchvision>=0.11.0
+
+# Computer vision
+opencv-python>=4.5.0
+opencv-contrib-python>=4.5.0
+pillow>=9.0.0
+scikit-image>=0.18.0
+
+# 3D visualization
+open3d>=0.13.0
 matplotlib>=3.5.0
-PyWavelets>=1.3.0
-flask>=2.2.0
-werkzeug>=2.2.0
-requests>=2.28.0
-pillow>=9.2.0
-pandas>=1.5.0
-tensorboard>=2.10.0
-pytest>=7.0.0
-plotly>=5.10.0
-fastdtw>=0.3.4
-pyrender>=0.1.45
+plotly>=5.5.0
+
+# Audio processing
+librosa>=0.8.0
+soundfile>=0.10.0
+
+# Web interface
+flask>=2.0.0
+werkzeug>=2.0.0
+gunicorn>=20.1.0
+flask-cors>=3.0.0
+
+# Data handling
+pyyaml>=6.0
+h5py>=3.6.0
+joblib>=1.1.0
+
+# Signal processing
+resampy>=0.3.0
+wavesets>=0.1.0
+
+# Progress bars
+tqdm>=4.62.0
+
+# Machine learning utilities
+scikit-learn>=1.0.0
+tensorboard>=2.8.0
+
+# Evaluation metrics
+pycocotools>=2.0.4
+
+# Pose estimation libraries
+mediapipe>=0.8.9
+
+# Media handling
 ffmpeg-python>=0.2.0
+imageio>=2.13.0
+imageio-ffmpeg>=0.4.5
+
+# Similarity analysis
+fastdtw>=0.3.4
+tslearn>=0.5.2
+pywavelets>=1.2.0
+
+# Graph neural networks
+torch-geometric>=2.0.0
+torch-sparse>=0.6.13
+torch-cluster>=1.6.0
+torch-scatter>=2.0.9
+torch-spline-conv>=1.2.1
+
+# Transformers
+transformers>=4.16.0
+
+# For web app development
+bootstrap-flask>=2.0.0
+jinja2>=3.0.0
